# Conterest

./: .gitignore  README.md  compose.yml  manage.py  pyproject.toml
account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0002_alter_profile_photo.py  0003_profile_description.py
account/static/css/: base.css  form.css
account/templates/: base.html  pagination.html
account/templates/account/: dashboard.html  edit.html  register.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html
configs/: admin.py  forms.py  models.py  urls.py  views.py
configs/migrations/: 0001_initial.py  0002_alter_config_slug.py  0003_config_image_delete_image.py  0004_alter_config_managers_config_unique_slug_per_user.py
configs/static/css/: detail.css  list.css
configs/templates/configs/: config_list.html  create.html  details.html  list.html
conterest/: asgi.py  settings.py  urls.py
conterest/account/: views.py
conterest/account/migrations/: 0001_initial.py
conterest/account/templates/account/: register.html
conterest/account/templates/registration/: password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
conterest/conterest/: settings.py  urls.py  wsgi.py
