[project]
name = "conterest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-taggit==6.1.0",
    "easy-thumbnails==2.10.1",
    "markdown>=3.10.2",
    "pillow==12.1.1",
    "psycopg[binary]>=3.3.3",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = []
